
public interface Memento {

    float getGpa();
}
