@startuml
skinparam classAttributeIconSize 0


    interface Caretaker {
        {static} + savedStudents : ArrayList<Memento>
        {abstract} + addMemento()
        {abstract} + getMemento()
    }

    class Driver {
        {static} + main()
    }

    class GUI {
        + dob : JTextArea
        + gpa : JTextArea
        + name : JTextArea
        + tNumber : JTextArea
        ~ currentDetails : int
        ~ savedStudentDetails : int
        - btnRedo : JButton
        - btnSave : JButton
        - btnUndo : JButton
        + GUI()
    }

    class GUI.ButtonListener {
        + actionPerformed()
    }

    interface Memento {
        {abstract} + getGpa()
    }

    interface Originator {
        {abstract} + Restore()
        {abstract} + Save()
        {abstract} + setGpa()
    }

    class StudentCaretaker {
        + addMemento()
        + getMemento()
    }

    class StudentMemento {
        - gpa : float
        + StudentMemento()
        + getGpa()
    }

    class StudentOriginator {
        - dob : String
        - gpa : Float
        - name : String
        - studentRecords : ArrayList
        - tNumber : String
        + Restore()
        + Save()
        + StudentOriginator()
        + StudentOriginator()
        + setGpa()
        + toString()
    }

  

  GUI -up-|> javax.swing.JFrame
  GUI o-- Caretaker : caretaker
  GUI o-- Originator : originator
  GUI +-down- GUI.ButtonListener
  GUI.ButtonListener .up.|> java.awt.event.ActionListener
  StudentCaretaker .up.|> Caretaker
  StudentMemento .up.|> Memento
  StudentOriginator .up.|> Originator




@enduml
